fix(cell): disable tap highlights on iOS (#1646)
* fix(cell): disable tap highlights on iOS (#1645)

* chore: update `tap-highlight-color` to transparent

--- a/packages/varlet-ui/src/cell/cell.less
+++ b/packages/varlet-ui/src/cell/cell.less
@@ -24,6 +24,7 @@
   box-sizing: border-box;
   font-size: var(--cell-font-size);
   color: var(--cell-color);
+  -webkit-tap-highlight-color: transparent;
 
   &--border {
     &::after {
